# districare_project

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_assignment_confirmation_fields.py  0003_recommendation_trace_fields.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/domain/: enums.py
backend/app/messaging/: rabbitmq.py
backend/app/models/: __init__.py  ambulance.py  assignment.py  common.py  emergency.py  event.py  failure.py  recommendation.py
backend/tests/: conftest.py  test_distributed_base.py
docs/fase_1/: modelo_inicial.md  servicio_emergencias_api.md  trazabilidad_creacion.md
docs/fase_2/: fase_2.md  trazabilidad_fase_2.md
docs/fase_3/: comprobacion_funcional.md  trazabilidad_fase_3.md
docs/fase_4/: heuristica_ia.md  trazabilidad_recomendaciones.md
docs/fase_5/: alcance_final_programa.md  decisiones_diseno.md  escenarios_demo.md  integracion_api.md  inventario_componentes.md  justificacion_sistema_distribuido.md  resumen_implementacion.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/electron/: dev.cjs  main.cjs
frontend/src/: App.tsx  index.css  types.ts
infrastructure/: docker-compose.yml
scripts/: run_ambulance_node.py  run_backend.ps1  run_infrastructure.ps1  seed_demo_data.py
simulator/ambulance_node/: heartbeat.py  main.py  node_client.py
(+26 files in other folders)
